--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
 			</div>
 		</header>
 
+
 		<div class="container">
+			<form onsubmit="return changeCity()">
+				<select id="city-type" class="city-type">
+					<option>Select a City</option>
+				</select>
+			</form>
+		</div>
+		<!-- <div class="container">
 			<form onsubmit="return changeCity()">
 				<input type="text" id="city-type" class="city-type" placeholder="Enter a city name...">
 				<input type="submit" value="Update" id="submit-btn" class="submit-btn">
 			</form>
-		</div>
+		</div> -->
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js">
